@@ -95,7 +95,7 @@ IRCDCAPAB myIrcdcap[] = {
      0,                         /* UID          */
      0,                         /* KNOCK        */
      0,                         /* CLIENT       */
-     0,                         /* IPV6         */
+     1,                         /* IPV6         */
      0,                         /* SSJ5         */
      0,                         /* SN2          */
      0,                         /* TOKEN        */
@@ -169,12 +169,13 @@ void IRCDModeInit(void)
 
 char *scarynet_nickip(char *host)
 {
-    struct in_addr addr;
-    int decoded;
+    char ipaddr[INET6_ADDRSTRLEN];
 
-    decoded = base64toint(host);
-    addr.s_addr = ntohl(decoded);
-    return sstrdup(inet_ntoa(addr));
+    base64toip(host, (char *)&ipaddr);
+
+    alog(LOG_DEBUG, "debug: Decoded base64 %s to %s", host, ipaddr);
+
+    return sstrdup((char *)&ipaddr);
 }
 
 /* On Services connect the modes are given */
@@ -554,7 +555,7 @@ void scarynet_cmd_capab()
 /* SERVER irc.undernet.org 1          933022556    947908144   J10        AA]]]             :[127.0.0.1] A Undernet Server */
 void scarynet_cmd_server(char *servname, int hop, char *descript)
 {
-    send_cmd(NULL, "SERVER %s %d %ld %lu J10 %s]]] +s :%s", servname, hop,
+    send_cmd(NULL, "SERVER %s %d %ld %lu J10 %s]]] +s6 :%s", servname, hop,
              (long int) denora->start_time, (long int) time(NULL), p10id,
              descript);
 }
