@@ -4,6 +4,7 @@ Denora v1.4.5-SVN
 -----------------
 
 Additions
+10/12/29 r374 [2] Added support for user IPv6 addresses with scarynet
 10/12/29 r373 [2] Added support for user IPv6 addresses with ircu and unrealircd
 10/05/25 r355 [3] Added Portuguese language file
 
@@ -14,6 +15,7 @@ Changes
 10/07/02 r358 inspircd12 module declared compatible with inspircd 2.0
 
 Fixes
+10/12/29 r374 [2] Removed 2 redundant variables and updated ircdcapab for IPv6
 10/12/08 r372 Ignore PRIVMSG messages sent directly from ircds [closes #1186]
 10/09/08 r366 Fixed P10 MODE not using the correct channel creation timestamp
 10/08/12 r365 inspircd12 now sends proper PING messages
